@@ -17,6 +17,7 @@ Features added
 ----------
   * Trains now moves and player agents can get on/off
   * Persuaded peds follow their leader in cars and trains
+  * When player agents shoot on a vehicle, the driver is ejected
 
 Known issues with this release
 ------------------------------
